# qmec

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/qmec/: __init__.py  datasets.py  qmec.py
src/qmec/data/: qmec_output_1962_2019.txt
tests/: diff_results.py  test_qmec.py
