[tool.poetry]
name = "qmec"
version = "0.1.0"
description = "A python implementation of Qmec, a model that provides instantaneous freshwater discharge rates from water level measurements alone at two tide gauge stations."
authors = ["Pierre Bourgault"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
