[tool.poetry]
name = "qmec"
version = "0.1.0"
description = "A python implementation of Qmec, a model that provides instantaneous freshwater discharge rates from water level measurements alone at two tide gauge stations."
authors = ["Pierre Bourgault"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.3"
numpy = "<1.24"
numba = "^0.56.4"
scipy = "^1.10.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
